# IncX

./: .gitattributes  .gitignore  DRise-analysis-one-object-video.ipynb  README.md  batch.sh  batch_experiment.sh  batch_experiment_gpu.sh  batch_experiment_part_2.sh  batch_increx_gpu.sh  batch_incx_gpu.sh  dataset.ipynb  experiment-results.ipynb  experiment.py  increx_experiment.py  main.py  metrics-saliency.ipynb  metrics.ipynb  multiple_batch.sh  multiple_experiment.sh  multiple_experiment_part_2.sh  pyproject.toml  read_baseline_results.ipynb  read_results.ipynb  results.pkl  saliency_map_comparison.ipynb  sort.py  video_tracking.ipynb
ReX/: incremental_ReX.ipynb  incremental_ReX_YOLO.ipynb
data/: comparison_results.pkl  metrics_results.pkl
datasets/: dataset.py  dataset_enum.py
dependencies/sort/: sort.py
experiments/comparison/: batch_metrics.sh  batch_similarity_comparison.sh  get_blob_names.py  get_blob_names_metrics.py  get_metrics.py  get_similarity_comparison.py  multiple_batch_metrics.sh  multiple_batch_similarity.sh
experiments/d_rise/: batch_experiment_gpu.sh  get_blob_names.py  get_metrics.py  get_saliency_maps.py
experiments/incx/: batch_experiment_gpu.sh  get_job_names.py  get_saliency_maps.py  multiple_experiment_gpu.sh
helpers/: pytorch_yolov8_wrapper.py
incremental_explainer/: explanations.py  image_moving.py  image_scaling.py  tracking.py  tracking_draft.py
incremental_explainer/data_models/: increx_output.py
incremental_explainer/explainers/: base_explainer.py  d_rise.py  explainer_factory.py
incremental_explainer/metrics/: deletion.py  epg.py  exp_proportion.py  exp_size.py  insertion.py  metrics.py  metrics_enum.py
incremental_explainer/models/: base_model.py  faster_rcnn.py  labels.py  model_enum.py  model_factory.py  rt_detr.py  yolo.py
incremental_explainer/tracking/: exp_tracker.py  increx.py  so_tracker.py
incremental_explainer/transformations/: image_moving.py
incremental_explainer/utils/: explanations.py  saliency_maps.py  save_results.py  video.py
incrementalexplainer/: __init__.py
incx/: __init__.py
results/: baseline.pkl
tests/: 10_video_inputs_support_test.py  11_python_version_check_test.py  12_pypi_availability_check_test.py  13_azure_deployment_check_test.py  14_framework_version_check_test.py  1_latency_measurement_test.py  2_model_support_verification_test.py  3_explainability_tool_verification_test.py  4_insertion_value_test.py  5_deletion_value_test.py  6_epg_value_test.py  7_exp_proportion_test.py  8_single_image_support_test.py  9_consecutive_images_support_test.py
(+69 files in other folders)
