[tool.poetry]
name = "incrementalexplainer"
version = "0.1.0"
description = ""
authors = ["Santiago Calderón <santiagocalderon1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
