[tool.poetry]
name = "incrementalexplainer"
version = "0.1.1"
description = ""
authors = ["Santiago Calderón <santiagocalderon1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
opencv-python = "4.9.0.80"
ipykernel = "^6.29.5"
matplotlib = "3.6.3"
numpy = "1.26.0"
scikit-image = "^0.24.0"
filterpy = "^1.4.5"
pydantic = "^2.8.2"
ultralytics = "8.2.55"
captum = "^0.7.0"
dill = "^0.3.8"
ml-wrappers = "^0.5.5"
cvzone = "^1.6.1"
torch = {version = "^2.3.1+cu118", source = "torchcu118"}
torchvision = {version = "^0.18.1+cu118", source = "torchcu118"}
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
azure-storage-blob = "^12.21.0"
azure-identity = "^1.17.1"

[[tool.poetry.source]]
name = "torchcu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -W ignore::DeprecationWarning --cov=incrementalexplainer"
testpaths = [
    "tests",
]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipywidgets = "^8.1.3"
pytest-cov = "^5.0.0"

[tool.coverage.run]
omit = [
    "incrementalexplainer/dependencies/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
